 *   - ~ altlog data structure wasn't aligned to 4b (rev. 5_b2)
 *   - % Changed some altlog properties, update filelog scripts and rebuild filelog if using it (rev. 5)
 *   - % Made --sort ..,<order> parameter optional (rev. 6_b1)
 *   - + Implemented insertion sort (rev. 6_b2)
 *   - % Made quicksort the default sorting algorithm (rev. 6_b3)
 *   - + Implemented selection sort (rev. 6_b4)
 *
 * v2.3:
 *
 *   - + Started glutil-precheck, on MKDIR filtering processor, uses imdb/tvrage data logs.
 *   - + Add loc_dm.sh and loc_cl.sh
 *   - ~ Fix memory leak in file proc (-x)
 *   - ~ Clean up resources after done (-x)
 *   - ~ Filesystem parser ignored elements not of type DT_REG (regular file)
 *   - % Higher resolution (nanosecond) loop interval can be given to --loop
 *   - % Log import (-z) ignores # commented lines
 *   - + Add --xretry
 *   - % Changed default behaviour: dirlog rebuild imports files on requested depth level (rev. 8)
 *   - + Add --indepth - scans each import subject recursively (old behaviour) (rev. 8)
 *   - % Passing '-' as argument to --folders reads from stdin (rev. 8)
 *   - ~ Full filesystem rescan (dirlog rebuild) not recursing (rev. 8)
 *   - % Passing '-' as argument to path overrides reads from stdin (rev. 8)
 *   - ~ Full filesystem rescan (dirlog rebuild) not scanning files (rev. 9)
 *   - % Changed option name for full dirlog rebuild from '-f' to '--full' (rev. 10)
 *   - ~ Update in full dirlog rebuild mode fixed (rev. 10)
 *   - ! Large performance boost in dirlog update mode (rev. 10)
 *   - ~ Dirlog rebuild update mode broken (-r -u) (rev. 10) 
 *   - ~ Do not retry opening nukelog if it fails the first time (-r) (rev. 11)
 *   - ~ Filtering options broken when no log existed (-r) (rev. 11)
 *   - ~ Sparseness ({sparse}) was not calculated properly (rev. 12)
 *   - ~ Certain stages of SFV rebuild ignoring --nowrite (rev. 12)
 *   - + SUID/SGID/sticky bit octet support (rev. 13)