@@ -38,6 +38,11 @@
 #define _E_MSG_FDM_WFC                  _E_MSG_DEF_WF _E_MSG_DEF_CC
 #define _E_MSG_FDM_NORECW               "no data was written"
 
+#define F_LOAD_RECORD_FLUSH             ((uint16_t)1 << 1)
+#define F_LOAD_RECORD_DATA              ((uint16_t)1 << 2)
+
+#define F_LOAD_RECORD_ALL               (F_LOAD_RECORD_FLUSH|F_LOAD_RECORD_DATA)
+
 typedef int
 (*__g_mdref)(__g_handle hdl, pmda md, off_t count);
 
@@ -72,9 +77,13 @@ flush_data_md(__g_handle hdl, char *outfile);
 int
 m_load_input_n(__g_handle hdl, FILE *input);
 int
+g_d_write_postgcb(void *buffer, void *p_hdl);
+int
 g_enum_log(_d_enuml callback, __g_handle hdl, off_t *nres, void *arg);
 int
 determine_temp_path(char *file, char *output, size_t max_out);
+int
+g_load_record(__g_handle hdl, const void *data, off_t max, uint16_t flags);
 
 #define OPLOG_OUTPUT_NSTATS(dfile, sdst) { \
   if (sdst.bw > 0) \
