@@ -33,6 +33,7 @@
  *   - + Implemented insertion sort (rev. 6_b2)
  *   - % Made quicksort the default sorting algorithm (rev. 6_b3)
  *   - + Implemented selection sort (rev. 6_b4)
+ *   - % Flush data to disk every so often, to avoid filling up memory buffer (-z) (rev. 7_b1)
  *
  * v2.3:
  *
